# daarion-edge-client

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/payloads/: ping_math.py  text_hash.py
src-tauri/src/: backend_health.rs  capabilities.rs  config.rs  enrollment.rs  genesis.rs  heartbeat.rs  identity.rs  lib.rs  main.rs  messaging.rs  pairing.rs  provisioning.rs  registry_client.rs  reset.rs
src-tauri/src/agents/: agent_execution.rs  agent_intent.rs  agent_result_binding.rs  approval_executor.rs  approval_policy.rs  approval_proposal.rs  authority_embodiment.rs  authority_interface.rs  authority_subrole.rs  authority_team.rs  governance_escalation.rs  governance_quorum.rs  governance_review.rs  governance_role.rs  mod.rs  optimization_plan.rs  plan_executor.rs  planning_agent.rs
src-tauri/src/authorities/: aip_enforcer.rs  authority_conflict.rs  authority_conflict_resolver.rs  authority_decision.rs  authority_embodiment.rs  authority_escalation.rs  authority_protocol.rs  authority_trace.rs  mod.rs  ontology.rs
src-tauri/src/coordination/: alignment_signal.rs  coordination_engine.rs  coordination_policy.rs  divergence_detector.rs  mod.rs
src-tauri/src/districts/: district_specialization.rs  mod.rs  specialization_activation.rs  specialization_guardrails.rs  specialization_rollout.rs  specialization_signal.rs  specialization_strategy.rs  specialization_transition.rs
src-tauri/src/economy/: circulation_logic.rs  mod.rs  (+3 more)
(+149 files in other folders)
