[package]
name = "daarion-edge-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daarion_edge_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.6.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full", "sync"] }
sysinfo = "0.38.4"
hex = "0.4.3"
bip39 = "2.2.0"
cpal = "0.15.3"
hound = "3.5.1"
bs58 = "0.5.1"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
urlencoding = "2.1"
